# dl_lecture_competition_pub

./: .gitignore  Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
configs/: config.yaml
src/: datasets.py  models.py
