[tool.poetry]
name = "dl-lecture-competition-pub"
version = "0.1.0"
description = ""
authors = ["ist-ipc3_gpu <ipc3.gpu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
pandas = "^2.2.2"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
